# numerical-data-representation

./: .gitignore  README.md  pyproject.toml  table_infromation_retrieval.py
assignment/: README.md  text.md
notebooks/: evaluation.ipynb  playgroud.ipynb  plot_embedding_relations.ipynb  test_integer_approximations.ipynb  test_string_approximation.ipynb
source/: __init__.py  encode.py  utils.py
source/integer_representation/: __init__.py
source/number_representation/: __init__.py  encodings.py
source/numeric_representation/: __init__.py  base_numeric_model.py  lm_embedding.py  logarithmic_embedding.py  sigmoid_embedding.py  sinusoidal_embedding.py
source/string_representation/: __init__.py
tests/: test_encode_function.py
