[project]
name = "numerical-data-representation"
version = "0.1.0"
description="Package for representation of numerical data in format of integers or strings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["source"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
